xfsprogs-2.5.9 (19 September 2003)
	- Sync up user/kernel source in libxfs, libxlog and headers.
	- Add new inode flags into xfs_db too.

xfsprogs-2.5.8 (12 September 2003)
	- Add missing options to xfs_db frag command one-line summary.
	- Add xfs_io commands for setting and clearing new inode flags
	  for immutable/append-only/sync/no-atime/no-dump.
	- Dump some other statfs fields in the xfs_io statfs commands.
	- Remove "test" mode from xfs_repair, only useful in xfs_check.
	- Fix problem in xfs_logprint where it was trying to continue
	  in the presence of a corrupt log when it shouldn't have.
	- Fix an incorrect assertion in xfs_logprint in regards to the
	  validity of the log start block.
	- Fix xfs_growfs (and hence xfs_info) to allow it to be given
	  either a mount point or a device in the mount table - it'll
	  figure it out and should do the right thing either way now.

xfsprogs-2.5.7 (29 August 2003)
	- Sync up user/kernel source in libxfs and headers.
	- Make xfs_copy a tad more portable, although work remains.
	- Add a "test" mode to xfs_repair and xfs_check which allows
	  for sparse (and hence extremely large) filesystem testing.

xfsprogs-2.5.6 (19 August 2003)
	- Fix a mkfs problem where it could exit inappropriately when
	  a large data volume stripe unit was either specified on the
	  command line or via querying the underlying volume manager.

xfsprogs-2.5.5 (07 August 2003)
	- Update xfs_io command to allow reading from non-XFS files.
	- Sync up user/kernel source in libxfs, libxlog and headers.
	- Update xfs_db and xfs_logprint commands to print new inode
	  flush iteration field.

xfsprogs-2.5.4 (23 July 2003)
	- Update xfs_io bmap command to report unwritten extent flag
	  if it is set on an extent (in verbose mode only).
	- Introducing xfs_copy.
	- Fix shell quoting problem in xfs_bmap script.

xfsprogs-2.5.3 (07 July 2003)
	- Update xfs_io commands which take user input in terms of