@@ -3,5 +3,5 @@
 #
 PKG_MAJOR=2
 PKG_MINOR=5
-PKG_REVISION=9
+PKG_REVISION=10
 PKG_BUILD=0
